--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@
 .chef/*.pem
 .chef/encrypted_data_bag_secret
 .chef
+.ruby-gemset
+
+/cookbook/apt
+/cookbook/apache2
+/cookbook/iptables
+/cookbook/logrotate
+/cookbook/openssl
+/cookbook/postgresql
+
+/tmp
